@@ -1,3 +1,7 @@
+2019-12-03 Wiley E. Hill <wileyhill@gmail.com>
+
+    * src/s_string_list.c: Utilize geda_strdup macro to shorten line lengths.
+
 2019-11-30 Wiley E. Hill <wileyhill@gmail.com>
 
     * po/en_GB.po: Update Great Britain.
